--- a/src/test/resources/Config.properties
+++ b/src/test/resources/Config.properties
@@ -1,7 +1,7 @@
 browser = chrome
 url = https://naveenautomationlabs.com/opencart/
 
-username = 
-password =
+username = bhogale.akshay11@gmail.com
+password = Aksh@115
 
 headless = false
